Primer draft del portafolio. Esqueleto general creado e información básica llenada. Tiene mucho trabajo pendiente.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Blog | Iván Camacho</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet" />
 </head>
+
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+  <header>
+    <h1><a href="index.html">Iván Camacho</a></h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="portafolio.html">Portafolio</a></li>
+        <li><a href="acerca.html">Acerca de mí</a></li>
+        <li><a href="cv.html">CV</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="inicio" class="seccion">
+    <h2>¡Hola! Soy Iván Camacho</h2>
+    <p>Desarrollador Full Stack Junior con pasión por crear soluciones web funcionales y atractivas.</p>
+  </section>
+
+  <section id="sobre-mi" class="seccion">
+    <h2>Sobre mí</h2>
+    <p>
+      Soy un programador full stack junior con experiencia en desarrollo web utilizando HTML, CSS, JavaScript y Java. 
+      Me encanta aprender nuevas tecnologías y trabajar en equipo. 
+      Tengo amplia experiencia trabajando con equipos diversos, tanto locales como extranjeros en entornos de manufactura. 
+    </p>
+  </section>
+
+  <section id="proyectos" class="seccion">
+    <h2>Proyectos</h2>
+    <div class="proyecto">
+      <h3>Click N' Sweet</h3>
+      <img src="img/captura-proyecto.png" alt="Captura del proyecto">
+      <p>Click N' Sweet es un proyecto academico full stack colaborativo en dónde creamos una e-commerce desde cero. 
+        Tuve una participación activa durante la realización del proyecto
+        en dónde lideré al equipo en toma de decisiones. 
+        Descripción breve del proyecto, qué hace, cómo lo hiciste, y qué tecnologías usaste.</p>
+      <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript, MySQL, Bootstrap.</p>
+      <a href="https://github.com/tuusuario/tu-proyecto" target="_blank">Ver código</a> |
+      <a href="https://tuusuario.github.io/tu-proyecto/" target="_blank">Ver demo</a>
+    </div>
+  </section>
+
+<section id="habilidades" class="seccion">
+  <h2>Habilidades</h2>
+  <div class="skills-grid">
+    <img src="imagenes/frontend/html5_226269.png" alt="HTML5" title="HTML5" />
+    <img src="imagenes/frontend/CSS3_icon-icons.com_67069.png" alt="CSS3" title="CSS3" />
+    <img src="imagenes/frontend/js_5968292.png" alt="JavaScript" title="JavaScript" />
+
+  </div>
+</section>
+
+  <section id="contacto" class="seccion">
+    <h2>Contacto</h2>
+    <p>Puedes contactarme en: <a href="mailto:tuemail@example.com">ivancabo19@gmail.com</a></p>
+    <p>
+      <a href="https://github.com/ivancabo19" target="_blank">GitHub</a> |
+      <a href="https://linkedin.com/in/iván-camacho" target="_blank">LinkedIn</a>
+    </p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Iván Camacho Bojórquez. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
