Ajuste de imagen

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h2>Proyectos</h2>
     <div class="proyecto">
       <h3>Click N' Sweet</h3>
-      <img src="img/captura-proyecto.png" alt="Captura del proyecto">
+      <img src="imagenes/otros/Captura.PNG" alt="Captura del proyecto">
       <p>Click N' Sweet es un proyecto academico full stack colaborativo en dónde creamos una e-commerce desde cero. 
         Tuve una participación activa durante la realización del proyecto
         en dónde lideré al equipo en toma de decisiones. 
