Probando nuevos diseños

--- a/CV.html
+++ b/CV.html
@@ -40,17 +40,34 @@
       </ul>
     </section>
 
-    <section>
-      <h3>Habilidades</h3>
+<section class="seccion" id="habilidades">
+  <h2>Habilidades</h2>
+
+  <div class="habilidades-contenedor">
+    <!-- Frontend -->
+    <div class="habilidad-columna">
+      <h3>Frontend</h3>
       <div class="skills-grid">
-        <img src="img/skills/html.png" alt="HTML5" title="HTML5" />
-        <img src="img/skills/css.png" alt="CSS3" title="CSS3" />
-        <img src="img/skills/js.png" alt="JavaScript" title="JavaScript" />
-        <img src="img/skills/react.png" alt="React" title="React" />
-        <img src="img/skills/node.png" alt="Node.js" title="Node.js" />
-        <img src="img/skills/mongo.png" alt="MongoDB" title="MongoDB" />
+        <div class="skill"><img src="imagenes/frontend/html5_226269.png" alt="HTML5" title="HTML5" /></div>
+        <div class="skill"><img src="imagenes/frontend/CSS3_icon-icons.com_67069.png" alt="CSS3" title="CSS3" /></div>
+        <div class="skill"><img src="imagenes/frontend/js_5968292.png" alt="JavaScript" title="JavaScript" /></div>
+        <div class="skill"><img src="img/skills/react.png" alt="React" title="React" /></div>
       </div>
-    </section>
+    </div>
+
+    <!-- Backend -->
+    <div class="habilidad-columna">
+      <h3>Backend</h3>
+      <div class="skills-grid">
+        <div class="skill"><img src="img/skills/node.png" alt="Node.js" title="Node.js" /></div>
+        <div class="skill"><img src="img/skills/mongo.png" alt="MongoDB" title="MongoDB" /></div>
+        <div class="skill"><img src="img/skills/express.png" alt="Express" title="Express" /></div>
+        <div class="skill"><img src="img/skills/sql.png" alt="SQL" title="SQL" /></div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <p><a href="docs/CV-[TuNombre].pdf" download>Descargar CV en PDF</a></p>
   </main>
