--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1><a href="index.html">Iván Camacho</a></h1>
     <nav>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
+        <li><a href="index.html" class="active">Inicio</a></li>
         <li><a href="portafolio.html">Portafolio</a></li>
         <li><a href="acerca.html">Acerca de mí</a></li>
         <li><a href="cv.html">CV</a></li>
@@ -46,26 +46,52 @@
       <p>Click N' Sweet es un proyecto academico full stack colaborativo en dónde creamos una e-commerce desde cero. 
         Tuve una participación activa durante la realización del proyecto
         en dónde lideré al equipo en toma de decisiones. 
-        Descripción breve del proyecto, qué hace, cómo lo hiciste, y qué tecnologías usaste.</p>
       <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript, MySQL, Bootstrap.</p>
-      <a href="https://github.com/tuusuario/tu-proyecto" target="_blank">Ver código</a> |
-      <a href="https://tuusuario.github.io/tu-proyecto/" target="_blank">Ver demo</a>
+      <a href="https://github.com/LuisaLzrGcia/ClickNSweet" target="_blank">Ver código</a> |
+      <a href="https://luisalzrgcia.github.io/ClickNSweet/" target="_blank">Ver demo</a>
     </div>
   </section>
 
-<section id="habilidades" class="seccion">
+<section class="seccion" id="habilidades">
   <h2>Habilidades</h2>
-  <div class="skills-grid">
-    <img src="imagenes/frontend/html5_226269.png" alt="HTML5" title="HTML5" />
-    <img src="imagenes/frontend/CSS3_icon-icons.com_67069.png" alt="CSS3" title="CSS3" />
-    <img src="imagenes/frontend/js_5968292.png" alt="JavaScript" title="JavaScript" />
 
+  <div class="habilidades-contenedor">
+    <!-- Frontend -->
+    <div class="habilidad-columna">
+      <h3>Frontend</h3>
+      <div class="skills-grid">
+        <div class="skill"><img src="imagenes/frontend/html5_226269.png" alt="HTML5" title="HTML5" /></div>
+        <div class="skill"><img src="imagenes/frontend/CSS3_icon-icons.com_67069.png" alt="CSS3" title="CSS3" /></div>
+        <div class="skill"><img src="imagenes/frontend/js_5968292.png" alt="JavaScript" title="JavaScript" /></div>
+      </div>
+    </div>
+
+    <!-- Backend -->
+    <div class="habilidad-columna">
+      <h3>Backend</h3>
+      <div class="skills-grid">
+        <div class="skill"><img src="imagenes/backend/java-original.svg" alt="Java" title="Java" /></div>
+        <div class="skill"><img src="imagenes/backend/mysql-original-wordmark.svg" alt="MySQL" title="MySQL" /></div>
+        <div class="skill"><img src="imagenes/backend/nodejs-original-wordmark.svg" alt="Node.js" title="Node.js" /></div>
+      </div>
+    </div>
+
+    <!-- Herramientas -->
+    <div class="habilidad-columna">
+      <h3>Herramientas</h3>
+      <div class="skills-grid">
+        <div class="skill"><img src="imagenes/backend/git-original.svg" alt="Git" title="Git" /></div>
+        <div class="skill"><img src="img/skills/github.png" alt="GitHub" title="GitHub" /></div>
+        <div class="skill"><img src="img/skills/vscode.png" alt="VS Code" title="VS Code" /></div>
+        <div class="skill"><img src="img/skills/postman.png" alt="Postman" title="Postman" /></div>
+      </div>
+    </div>
   </div>
 </section>
 
   <section id="contacto" class="seccion">
     <h2>Contacto</h2>
-    <p>Puedes contactarme en: <a href="mailto:tuemail@example.com">ivancabo19@gmail.com</a></p>
+    <p>Puedes contactarme en: <a href="mailto:ivancabo19@gmail.com">ivancabo19@gmail.com</a></p>
     <p>
       <a href="https://github.com/ivancabo19" target="_blank">GitHub</a> |
       <a href="https://linkedin.com/in/iván-camacho" target="_blank">LinkedIn</a>
