Agregando el logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar">
       <button class="menu-toggle" aria-label="Abrir menú" aria-expanded="false">☰</button>
-      <a href="#inicio" class="logo"><img src="imagenes/logo2.png" alt="Logo Iván Camacho"></a>
+      <a href="#inicio" class="logo"><img src="imagenes/otros/logo2.png" alt="Logo Iván Camacho"></a>
       <ul class="nav-links">
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
