Correción de liks de imagenes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar">
       <button class="menu-toggle" aria-label="Abrir menú" aria-expanded="false">☰</button>
-      <a href="#inicio" class="logo"><img src="imagenes/otros/logo2.png" alt="Logo Iván Camacho"></a>
+      <a href="#inicio" class="logo"><img src="imagenes/logos/logo2.png" alt="Logo Iván Camacho"></a>
       <ul class="nav-links">
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
@@ -57,7 +57,7 @@
         </p>
       </div>
       <div class="sobre-mi-foto">
-        <img src="imagenes/otros/foto.png" alt="Foto de Iván Cabo">
+        <img src="imagenes/logos/foto.png" alt="Foto de Iván Cabo">
       </div>
       </div>
     </section>
@@ -67,7 +67,7 @@
       <h2>Proyectos</h2>
       <div class="proyectos-grid">
         <!-- Tarjetas de proyecto -->
-        <div class="proyecto-card" style="--img:url(imagenes/portafolio/ClickNSweet.png)">
+        <div class="proyecto-card" style="--img:url(imagenes/portafolio/ClickNSweet.PNG)">
           <div class="proyecto-title">
             Click N' Sweet
       </div>
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="proyecto-card" style="--img:url(imagenes/portafolio/LandingPage.png)">
+        <div class="proyecto-card" style="--img:url(imagenes/portafolio/LandingPage.PNG)">
           <div class="proyecto-title">
             Landing Page
       </div>
@@ -91,7 +91,7 @@
             </div>
           </div>
         </div>
-        <div class="proyecto-card" style="--img:url(imagenes/portafolio/Blogsite.png)">
+        <div class="proyecto-card" style="--img:url(imagenes/portafolio/Blogsite.PNG)">
           <div class="proyecto-title">
             Blog site
       </div>
@@ -203,7 +203,7 @@
       <h4>O encontrarme en mis redes sociales:</h4>
       <div class="social-icons">
         <a href="https://linkedin.com/in/iv%C3%A1n-camacho" target="_blank" aria-label="LinkedIn">
-          <img src="imagenes/otros/linkedin-brands.svg" alt="LinkedIn">
+          <img src="imagenes/logos/linkedin-brands.svg" alt="LinkedIn">
         </a>
         <a href="https://github.com/ivancabo19" target="_blank" aria-label="GitHub">
           <img src="imagenes/backend/github-original.svg" alt="GitHub">
