--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="proyecto-card" style="--img:url(imagenes/portafolio/LandingPage.PNG)">
+        <div class="proyecto-card" style="--img:url(imagenes/portafolio/LandingPage.png)">
           <div class="proyecto-title">
             Landing Page
       </div>
